force-app/main/default/objects/mp_AE_SB_Accommodation__c/mp_AE_SB_Accommodation__c.object-meta.xml
<CustomObject>
    <label>AE/SB Accommodation</label>
    <nameField>
        <label>AE/SB Accommodation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE/SB Accommodations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>