force-app/main/default/objects/mp_AE_SB_Accommodation__c/fields/mp_Active__c.field-meta.xml
<CustomField>
    <fullName>mp_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>