force-app/main/default/objects/mp_AE_SB_Accommodation__c/fields/mp_AE_SB__c.field-meta.xml
<CustomField>
    <fullName>mp_AE_SB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE/SB</label>
    <referenceTo>AE_SB__c</referenceTo>
    <relationshipLabel>AE/SB Accommodations</relationshipLabel>
    <relationshipName>AE_SB_Accommodations</relationshipName>
    <type>Lookup</type>
</CustomField>