force-app/main/default/objects/mp_AE_SB_Accommodation__c/fields/mp_Image__c.field-meta.xml
<CustomField>
    <fullName>mp_Image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>