force-app/main/default/objects/mp_AE_SB_Accommodation__c/fields/mp_Name__c.field-meta.xml
<CustomField>
    <fullName>mp_Name__c</fullName>
    <formula>mp_Hotel_Name__c +&apos; &apos;+  mp_AE_SB__r.name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>