force-app/main/default/objects/mp_AE_SB_Accommodation__c/fields/orderxp_AE_SB_Accommodation_Type__c.field-meta.xml
<CustomField>
    <fullName>orderxp_AE_SB_Accommodation_Type__c</fullName>
    <formula>TEXT(mp_AE_SB__r.Type__c)</formula>
    <label>AE/SB Accommodation Type</label>
    <type>Text</type>
</CustomField>