force-app/main/default/objects/mp_AE_SB_Accommodation__c/fields/ordexp_Deal__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>AE/SB Accommodations</relationshipLabel>
    <relationshipName>AE_SB_Accommodations</relationshipName>
    <type>Lookup</type>
</CustomField>